2008-08-19  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/Makefile.am:
	* src/actions/EditCell.cc:
	Add functions "Edit Cell" and "Edit Next Cell".

2008-08-19  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	* src/SubtitleView.h:
	Add the option "start_editing" to function "select".
	Making the column heading as bold if it has the focus.

	* src/Subtitles.cc:
	* src/Subtitles.h:
	Add the option "start_editing" to function "select". 

2008-08-18  kitone  <kitone@gna.org>

	* src/actions/ExternalVideoPlayer.cc:
	Fix accelkey.

2008-08-14  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-08-14  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.22.3 release.

2008-08-14  kitone  <kitone@gna.org>

	* src/debug.cc:
	Add profiling to debug functions (disable by default).

2008-08-14  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	* share/glade/dialog-spell-checking.glade:
	* share/glade/dialog-style-editor.glade:
	* src/actions/ViewManager.cc:
	Fix: Dialog parent.

2008-08-14  kitone  <kitone@gna.org>

	* src/PluginSystem.cc:
	* src/gui/Application.cc:
	Improve the speed accessibility of the menu at launch.

2008-08-13  kitone  <kitone@gna.org>

	* share/glade/dialog-check-errors-preferences.glade:
	* share/glade/dialog-configure-keyboard-shortcuts.glade:
	* share/glade/dialog-preferences.glade:
	* share/glade/dialog-style-editor.glade:
	* src/actions/VideoPlayerManagement.cc:
	* src/gui/CheckErrorsUI.cc:
	Batch of spelling fixes by Luboš Staněk.

2008-08-13  kitone  <kitone@gna.org>

	* src/DocumentSystem.cc:
	Fix: Untitled document translatable.

	* src/gui/DialogFileChooser.cc:
	Fix: Add translation string.

2008-08-13  kitone  <kitone@gna.org>

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* prepare-po.sh:
	* share/Makefile.am:
	Add intltool. *.desktop file can be translated.
	Patch by Luboš Staněk.

	* share/subtitleeditor.desktop:
	Remove file.
