@@ -1,5 +1,10 @@
 2008-08-19  kitone  <kitone@gna.org>
 
+	* src/main.cc:
+	Add default values to [waveform-renderer].
+
+2008-08-19  kitone  <kitone@gna.org>
+
 	* share/menubar.xml:
 	* src/Makefile.am:
 	* src/actions/EditCell.cc:
